[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/UI/FloatingWindow.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/Close.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[node name="FloatingWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "This is a resizable window that is movable by the user. The window may also contain a title. A close button is available to hide the window."
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.41422
margin_top = -0.707123
margin_right = -1.41418
margin_bottom = -0.707153
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel/VBoxContainer/TitleContainer"]
margin_left = 512.0
margin_right = 512.0
margin_bottom = 14.0

[node name="CloseButton" type="TextureButton" parent="Panel"]
margin_left = 1012.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 12.0
rect_min_size = Vector2( 7, 7 )
texture_normal = SubResource( 1 )
texture_hover = SubResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
